package com.paroquia.domain;

public enum TipoMissa {
    COMUM,
    DOMINICAL,
    ESPECIAL
}