package com.paroquia.model.enums;

public enum Complexidade {
    SIMPLES,
    COMPLEXA
}