package com.paroquia.model.enums;

public enum Perfil {
    SUPER_ADMIN,
    ADMIN_PASTORAL,
    PADRE
}