package com.paroquia.model.enums;

public enum StatusConvocacao {
    PENDENTE,
    CONFIRMADO,
    EXPIRADO,
    INVALIDADO
}