@startuml classes

abstract class DefaultEntity <<MappedSuperclass>> {
  - id: Long
  - dataCadastro: LocalDateTime
  - dataAtualizacao: LocalDateTime
}

note bottom of DefaultEntity
  Todas as classes do domínio
  herdam de DefaultEntity
end note

enum TipoMissa {
  COMUM
  DOMINICAL
  ESPECIAL
}

enum Perfil {
  SUPER_ADMIN
  ADMIN_PASTORAL
  PADRE
}

enum StatusConvocacao {
  PENDENTE
  CONFIRMADO
  EXPIRADO
  INVALIDADO
}

enum Complexidade {
  SIMPLES
  COMPLEXA
}

class Membro {
  - nomeCompleto: String
  - dataNascimento: LocalDate
  - telefone: String
  - nomeResponsavel: String
  - telefoneResponsavel: String
  - ativo: boolean
  - anonimizado: boolean
  - dataAnonimizacao: LocalDateTime
  - motivoAnonimizacao: String
  - ultimaRespostaDisponibilidade: LocalDateTime
}

class Pastoral {
  - nome: String
  - descricao: String
  - ativo: boolean
  - elegivelLimiteParticipacao: boolean
}

note right of Pastoral
  elegivelLimiteParticipacao habilita
  os campos de limite em
  ConfiguracaoEscalonamento e a
  participação no algoritmo de
  prioridade (RF15.2). Flag explícito,
  não depende do nome da Pastoral.
  Hoje só true para Acólitos/Coroinhas.
end note

class ConfiguracaoEscalonamento {
  - ordemConvocacaoReforco: Integer
  - intervaloMinutosEscalonamento: Integer
  - permiteConvocacaoReforco: boolean
  - diaGeracaoMensal: Integer
  - prioridadeAtiva: boolean
  - limiteMissaSemanaComum: Integer
  - limiteMissaSemanaSolene: Integer
  - limiteMissaDominicalComum: Integer
  - limiteMissaDominicalSolene: Integer
}

note right of ConfiguracaoEscalonamento
  prioridadeAtiva (default false) só
  pode ser marcada true se os campos
  operacionais básicos (ordem, intervalo,
  dia de geração) já estiverem
  preenchidos (RF10.2). Enquanto false,
  o sorteio ignora a prioridade
  Acólito/Coroinha e os 4 limites.
  Os 4 campos de limite só têm efeito
  se Pastoral.elegivelLimiteParticipacao
  = true. Editáveis exclusivamente pelo
  Super Admin. NULL = sem teto.
  Quando preenchidos, devem ser >= 0.
end note

class ConfiguracaoSistema {
  - prazoAntecedenciaReforcoHoras: Integer
  - prazoLembreteHoras: Integer
}

note right of ConfiguracaoSistema
  Instância única (singleton).
  Configuração global, não por Pastoral.
end note

class Funcao {
  - nome: String
  - descricao: String
  - ativo: boolean
  - somenteSolene: boolean
  - complexidade: Complexidade
  - tipoMinimo: TipoMissa
}

note right of Funcao
  Pertence a exatamente uma
  Pastoral (1:N, obrigatório).
  tipoMinimo define elegibilidade
  por hierarquia: COMUM < DOMINICAL
  < ESPECIAL. Serve em qualquer tipo
  igual ou acima do próprio degrau.
  Também define obrigatoriedade
  (RF15.3) na geração automática.
  Aptidão cruzada é sempre manual,
  via Membro-Funcao.
end note

class MissaRecorrente {
  - diaSemana: DayOfWeek
  - horario: LocalTime
  - tipo: TipoMissa
  - ativo: boolean
}

class Missa {
  - dataHora: LocalDateTime
  - tipo: TipoMissa
  - solene: boolean
  - cancelada: boolean
}

note right of Missa
  missaRecorrenteId é opcional apenas
  quando tipo = ESPECIAL, e sincronizado
  com MissaRecorrente.tipo via trigger.
  Marcar solene = true cria vagas para
  Funcoes somenteSolene (RF17.8).
  cancelada = true suprime toda
  automação futura (RF17.9).
end note

class Escala {
}

class FormularioDisponibilidade {
  - mesReferencia: YearMonth
  - linkGoogleForms: String
  - dataAbertura: LocalDateTime
  - dataFechamento: LocalDateTime
  - minimoMissasMensal: Integer
}

class Disponibilidade {
}

class ConvocacaoReforco {
  - token: String
  - status: StatusConvocacao
  - onda: int
  - dataEnvio: LocalDateTime
  - dataResposta: LocalDateTime
  - dataExpiracao: LocalDateTime
}

class Usuario {
  - keycloakId: String
  - ativo: boolean
}

class UsuarioPerfil {
  - perfil: Perfil
}

Membro "0..*" -- "0..*" Pastoral
Membro "0..*" -- "0..*" Funcao
Funcao "0..*" --> "1" Pastoral : pertence a

Pastoral "1" --> "0..1" ConfiguracaoEscalonamento
Pastoral "1" --> "0..*" ConvocacaoReforco : onda de

Missa "1" --> "0..*" Escala
Membro "0..1" --> "0..*" Escala
Funcao "1" --> "0..*" Escala

MissaRecorrente "0..1" --> "0..*" Missa : gera

Pastoral "1" --> "0..*" FormularioDisponibilidade
FormularioDisponibilidade "1" --> "0..*" Disponibilidade
Membro "1" --> "0..*" Disponibilidade
Disponibilidade "0..*" -- "0..*" MissaRecorrente : disponível para

Escala "1" --> "0..*" ConvocacaoReforco : vaga em aberto
Membro "1" --> "0..*" ConvocacaoReforco : candidato

Membro "0..1" -- "0..1" Usuario : vinculado a

Usuario "1" --> "0..*" UsuarioPerfil
UsuarioPerfil "0..*" --> "0..1" Pastoral : escopo (se Admin Pastoral)

Missa --> TipoMissa
MissaRecorrente --> TipoMissa
Funcao --> TipoMissa
Funcao --> Complexidade
UsuarioPerfil --> Perfil
ConvocacaoReforco --> StatusConvocacao

@enduml